[package]
name = "ftp-server"
version = "0.8.0"
edition = "2021"

[dependencies]
libunftp = { version = "0.19.1"}
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.73"
cfg-if = "1.0"
path_abs = "0.5.1"
tracing = { version = "0.1.37", default-features = false }
tracing-attributes = "0.1.26"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9"
