[package]
name = "ftp-server"
version = "0.8.0"
edition = "2021"

[dependencies]
libunftp = { version = "0.19.1"}
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.73"
cfg-if = "1.0"
path_abs = "0.5.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.20"
pretty_env_logger = "0.5.0"
